--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
 Django==4.2.2
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
+idna==3.4
 mysqlclient==2.2.0
 Pillow==10.0.0
 pytz==2023.3.post1
+requests==2.31.0
 sqlparse==0.4.4
 typing-extensions==4.6.3
+urllib3==2.0.4
