--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.2.2
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 drf-extra-fields==3.7.0
+drf-writable-nested==0.7.0
 filetype==1.2.0
 idna==3.4
 mysqlclient==2.2.0
